# vibha-dashboard

./: .env.example  .gitignore  Cargo.toml  DAY-14-CLOSING-SUMMARY.md  DAY3_COMPLETION_REPORT.md  DAY_4_COMPLETE.md  DAY_5_PLAN.md  ROADMAP.md  VIBHA_DASHBOARD_CONTEXT.md  docker-compose.yml  package-lock.json  package.json
backend/agents/: Cargo.toml
backend/agents/src/: intent_parser.rs  lib.rs  question_handler.rs
backend/api/: Cargo.toml
backend/api/migrations/: 001_create_dashboards.sql
backend/api/src/: dashboard_data_handler.rs  kpi_metadata.rs  main.rs  query_executor.rs  query_executor_integration.rs  schema_registry.rs  scopes_handler.rs
backend/cli/: Cargo.toml
backend/cli/src/: lib.rs
backend/common/: Cargo.toml
backend/common/src/: confidence.rs  filters.rs  lib.rs  page_settings.rs
backend/database/: Cargo.toml
backend/database/src/: lib.rs
backend/database/src/schemas/: greenops.schema.json
backend/export/: Cargo.toml
backend/export/src/: lib.rs
backend/kafka/: Cargo.toml
backend/kafka/src/: lib.rs  messages.rs
backend/llm/: Cargo.toml
backend/llm/src/: lib.rs
database/migrations/: 001_init_schema.sql  003_analytics_scopes_and_sample_data.sql  004_fix_dashboards_schema.sql  20260605_add_phase2_tables.sql
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Card.tsx  ChartRenderer.tsx  DashboardBuilder.tsx  DashboardHome.tsx  DashboardSelector.tsx  DashboardViewer.tsx  DataTable.tsx  DynamicFilters.tsx  DynamicKPIs.tsx  EChartsRenderer.tsx  ErrorBoundary.tsx  ExportButtons.tsx  LayoutEngine.tsx  SchemaDebugger.tsx
frontend/src/components/charts/: BarChart.tsx  LineChart.tsx  PieChart.tsx
frontend/src/data/: dashboards.ts
frontend/src/hooks/: useChartEvents.ts  useDashboardData.ts  useParse.ts  useSchemaFetch.ts  useScopes.ts
frontend/src/services/: chartExport.ts  dashboardApi.ts  dashboardExport.ts  exportService.ts  mockApi.ts  performanceMonitor.ts  schemaApi.ts
frontend/src/styles/: design-tokens.css  vibha-components.css
frontend/src/theme/: vibhaTheme.ts
frontend/src/types/: dashboard.ts  index.ts  schema.ts
