[workspace]
members = [
    "backend/api",
    "backend/agents",
    "backend/database",
    "backend/kafka",
    "backend/llm",
    "backend/export",
    "backend/common",
    "backend/cli"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bharatagraj Shinde <bhara@vibha.ai>"]
license = "Apache-2.0"
repository = "https://github.com/bharatagraj/vibha-dashboard"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
pgvector = "0.3"
rdkafka = "0.35"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
