[package]
name    = "vibha-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
vibha-common   = { path = "../common" }
vibha-kafka    = { path = "../kafka" }
vibha-database = { path = "../database" }
tokio          = { workspace = true, features = ["full"] }
sqlx           = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
uuid           = { workspace = true }
chrono         = { workspace = true }
tracing        = { workspace = true }
reqwest        = { version = "0.13", features = ["json"] }
