[package]
name = "vibha-api"
version = "0.1.0"
edition = "2021"
authors = ["Bharatagraj Shinde <bhara@vibha.ai>"]
license = "Apache-2.0"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
