[package]
name    = "vibha-api"
version = "0.1.0"
edition = "2021"

[dependencies]
vibha-agents   = { path = "../agents" }
vibha-database = { path = "../database" }
vibha-common   = { path = "../common" }
tokio          = { workspace = true, features = ["full"] }
axum           = { workspace = true }
tower-http     = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow         = { workspace = true }
uuid           = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
