[package]
name    = "vibha-database"
version = "0.1.0"
edition = "2021"

[dependencies]
vibha-common = { path = "../common" }
sqlx         = { workspace = true, features = ["runtime-tokio-native-tls", "postgres"] }
tokio        = { workspace = true, features = ["full"] }
anyhow       = { workspace = true }
tracing      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
