[package]
name    = "vibha-kafka"
version = "0.1.0"
edition = "2021"

[dependencies]
vibha-common = { path = "../common" }
rdkafka      = { workspace = true }
tokio        = { workspace = true, features = ["full"] }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
